# MediaMatrix

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/gtbluesky/mediamatrix/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/gtbluesky/mediamatrix/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/gtbluesky/mediamatrix/activity/: AudioRecordActivity.kt  CameraActivity.kt  CameraCutActivity.kt  CameraPreviewActivity.kt  EGLTestActivity.kt  MainActivity.kt  ParticleEffectActivity.kt  PlayerActivity.kt  SkyBoxActivity.kt  SkySphereActivity.kt
app/src/main/java/com/gtbluesky/mediamatrix/view/: FocusImageView.kt
app/src/main/res/anim/: anim_slide_down.xml
app/src/main/res/drawable/: camera_state.xml
app/src/main/res/layout/: activity_audio_record.xml  activity_camera_cut.xml  activity_camera_preview.xml  activity_main.xml  activity_player.xml  camera_filter_layout.xml  camera_layout.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/github/gtbluesky/mediamatrix/: ExampleUnitTest.kt
app/src/test/java/com/gtbluesky/mediamatrix/: ExampleUnitTest.kt
camera-lib/: build.gradle
camera-lib/src/androidTest/java/com/gtbluesky/camera/: ExampleInstrumentedTest.kt
camera-lib/src/main/: AndroidManifest.xml
camera-lib/src/main/java/com/github/gtbluesky/camera/: CameraParam.kt  MatrixCameraFragment.kt  MatrixCameraView.kt
camera-lib/src/main/java/com/gtbluesky/camera/: CameraParam.kt  MatrixCameraFragment.kt  MatrixCameraView.kt
camera-lib/src/main/java/com/gtbluesky/camera/codec/: CodecParam.kt  CodecUtil.kt  HwAudioHandler.kt  HwEncoder.kt  HwVideoHandler.kt
camera-lib/src/main/java/com/gtbluesky/camera/controller/: OrientationController.kt  SensorController.kt
camera-lib/src/main/java/com/gtbluesky/camera/engine/: Camera2Engine.kt  CameraEngine.kt
camera-lib/src/main/java/com/gtbluesky/camera/entity/: SnapInfoEntity.kt
camera-lib/src/main/java/com/gtbluesky/camera/listener/: OnCameraFocusListener.kt  OnCaptureFrameListener.kt  OnCompletionListener.kt  OnRotationChangeListener.kt  OnZoomChangeListener.kt  StartFocusCallback.kt
camera-lib/src/main/java/com/gtbluesky/camera/render/: PreviewRenderer.kt  RenderHandler.kt  RenderManager.kt
camera-lib/src/main/java/com/gtbluesky/camera/service/: AudioRecordHandler.kt  AudioRecordService.kt  RecordState.kt
camera-lib/src/test/java/com/gtbluesky/camera/: ExampleUnitTest.kt
camera-library/: build.gradle
camera-library/src/androidTest/java/com/github/gtbluesky/camera/: ExampleInstrumentedTest.kt
camera-library/src/main/java/com/github/gtbluesky/camera/: CameraParam.kt  CameraPreviewFragment.kt  MatrixCameraFragment.kt
camera-library/src/test/java/com/github/gtbluesky/camera/: ExampleUnitTest.kt
codec-lib/: build.gradle
codec-lib/src/androidTest/java/com/github/gtbluesky/codec/: ExampleInstrumentedTest.kt
codec-lib/src/androidTest/java/com/gtbluesky/codec/: ExampleInstrumentedTest.kt
codec-lib/src/main/: AndroidManifest.xml
codec-lib/src/main/java/com/gtbluesky/codec/: AudioProcessor.kt  CodecParam.kt  CodecUtil.kt  HwAudioHandler.kt  HwDecoder.kt  HwEncoder.kt  HwVideoCombiner.kt  HwVideoHandler.kt  Sonic.kt  SonicAudioProcessor.kt
codec-lib/src/main/res/values/: strings.xml
codec-lib/src/test/java/com/gtbluesky/codec/: ExampleUnitTest.kt
codec-library/: build.gradle
codec-library/src/main/: AndroidManifest.xml
gles-lib/: build.gradle
gles-lib/src/androidTest/java/com/gtbluesky/gles/: ExampleInstrumentedTest.kt
gles-lib/src/main/: AndroidManifest.xml
gles-lib/src/main/assets/shader/: beauty_effect.frag  beauty_smooth.frag  color_convert.frag  droste_effect.frag  frame_blur.frag  gaussian_blur_normal.frag  gaussian_blur_normal.vert  gaussian_blur_pro.frag  gaussian_blur_pro.vert  glitch_effect.frag  gray_effect.frag  illusion_effect.frag  lookup_table.frag  mirror_screen_x.frag  mirror_screen_y.frag  mosaic_circle.frag  mosaic_square.frag  scale_effect.frag  shake_effect.frag  shine_white_effect.frag  soul_effect.frag  soul_out_effect.frag  split_screen_2.frag  split_screen_3.frag  split_screen_4.frag  split_screen_9.frag  tone_curve.frag
gles-lib/src/main/cpp/: NativeGL.cpp
gles-lib/src/main/cpp/common/: Looper.cpp  Looper.h  android_log.h
gles-lib/src/main/cpp/egl/: EglCore.cpp  EglCore.h  EglSurfaceBase.h  OffscreenSurface.cpp  OffscreenSurface.h  WindowSurface.cpp
gles-lib/src/main/cpp/gles/: GLHelper.cpp  GLHelper.h
gles-lib/src/main/cpp/glm/: CMakeLists.txt
gles-lib/src/main/cpp/render/: GLLooper.h
gles-lib/src/main/cpp/shape/: BaseShape.h  Triangle.cpp  Triangle.h
gles-lib/src/main/java/com/gtbluesky/gles/: FilterType.kt  NativeGL.kt
gles-lib/src/test/java/com/gtbluesky/gles/: ExampleUnitTest.kt
gles-library/: build.gradle
gles-library/src/main/cpp/: CMakeLists.txt
gles-library/src/main/cpp/egl/: EglSurfaceBase.cpp  WindowSurface.h
gles-library/src/main/cpp/gles/: GLShader.cpp  GLShader.h
gles-library/src/main/cpp/glm/: CMakeLists.txt
gles-library/src/main/cpp/render/: GLLooper.cpp  GLRenderer.cpp  GLRenderer.h
gles-library/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
player-lib/: build.gradle
player-lib/src/androidTest/java/com/gtbluesky/player/: ExampleInstrumentedTest.kt
player-lib/src/main/: AndroidManifest.xml
player-lib/src/main/cpp/: CMakeLists.txt  native-lib.cpp
player-lib/src/main/cpp/json/: CMakeLists.txt
player-lib/src/main/cpp/soundtouch/: CMakeLists.txt
player-lib/src/main/cpp/soundtouch/include/: STTypes.h
player-lib/src/main/cpp/src/: AppUtil.cpp  AppUtil.h  AudioInfo.cpp  AudioInfo.h  CMakeLists.txt  FFmpegController.cpp  FFmpegController.h  LogUtil.cpp  LogUtil.h  MatrixPlayer.cpp  NativeCallJava.cpp  NativeCallJava.h  PacketQueue.cpp  PacketQueue.h  PcmBean.cpp  PcmBean.h  PcmBufferQueue.cpp  PcmBufferQueue.h  PlayStatus.cpp  PlayStatus.h  SecurityUtil.cpp  SecurityUtil.h  VideoInfo.cpp  VideoInfo.h
player-lib/src/test/java/com/gtbluesky/player/: ExampleUnitTest.kt
(+155 files in other folders)
